--- a/Facebook_datatestdriven/Report/index.html
+++ b/Facebook_datatestdriven/Report/index.html
@@ -51,7 +51,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">21-09-2021 21:25:16</span>
+                    <span class="badge badge-primary">22-09-2021 11:48:57</span>
                 </a>
             </li>
         </ul>
@@ -121,8 +121,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">Tests</p> 
-								<p class="duration text-sm">0h:0m:32s+890ms</p> 
-								<span class="datetime">21:25:22 PM</span>
+								<p class="duration text-sm">0h:0m:24s+191ms</p> 
+								<span class="datetime">11:49:03 AM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -130,9 +130,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">Tests</h5>
-										<span class='badge badge-success'>21-09-2021 21:25:22</span>
-										<span class='badge badge-danger'>21-09-2021 21:25:55</span>
-										<span class='badge badge-default'>0h:0m:32s+890ms</span>
+										<span class='badge badge-success'>22-09-2021 11:49:03</span>
+										<span class='badge badge-danger'>22-09-2021 11:49:27</span>
+										<span class='badge badge-default'>0h:0m:24s+191ms</span>
 									</div>
 																	</div>
 							</div>
@@ -147,15 +147,15 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:25:22</td>
+				<td>11:49:03</td>
 				<td>
-Automating of FaceBook									</td>
+Automation FaceBook									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>21:25:55</td>
+				<td>11:49:27</td>
 				<td>
-Test passes									</td>
+Test Passes									</td>
 			</tr>
 	</tbody>
 </table>
@@ -232,7 +232,7 @@ Test passes									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">21-09-2021 21:25:16</h6>
+							<h6 class="font-weight-light">22-09-2021 11:48:57</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -248,7 +248,7 @@ Test passes									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:38.7384097</h6>
+							<h6 class="font-weight-light">00:00:29.7837512</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -264,7 +264,7 @@ Test passes									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<p class="">Duration</p>
-							<h6 class="font-weight-light">00:00:43.1430967</h6>
+							<h6 class="font-weight-light">00:00:34.5828108</h6>
 							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
